// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Label > should render label 1`] = `
<div>
  <label
    class="antialiased font-sans text-base font-normal text-nots-grey-800 dark:text-white"
    for="test"
  >
    Label
  </label>
</div>
`;

exports[`Label > should render with custom class 1`] = `
<div>
  <label
    class="antialiased font-sans text-base font-normal text-nots-grey-800 dark:text-white custom-class"
    for="test"
  >
    Label
  </label>
</div>
`;
